# tcc_llm_bert_benchmark

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_single_model_test.ipynb  03_full_benchmark.ipynb  03_train_bert.ipynb  04_benchmark_analysis.ipynb
reports/: CEIA-UFG_Gemma-3-Gaia-PT-BR-4b-it_chain_of_thought_fakebr.json  CEIA-UFG_Gemma-3-Gaia-PT-BR-4b-it_chain_of_thought_fakerecogna.json  CEIA-UFG_Gemma-3-Gaia-PT-BR-4b-it_few_shot_fakebr.json  CEIA-UFG_Gemma-3-Gaia-PT-BR-4b-it_few_shot_fakerecogna.json  CEIA-UFG_Gemma-3-Gaia-PT-BR-4b-it_zero_shot_fakebr.json  CEIA-UFG_Gemma-3-Gaia-PT-BR-4b-it_zero_shot_fakerecogna.json  Qwen_Qwen2-1.5B-Instruct_chain_of_thought_fakebr.json  Qwen_Qwen2-1.5B-Instruct_chain_of_thought_fakerecogna.json  Qwen_Qwen2-1.5B-Instruct_few_shot_fakebr.json  Qwen_Qwen2-1.5B-Instruct_few_shot_fakerecogna.json  Qwen_Qwen2-1.5B-Instruct_zero_shot_fakebr.json  Qwen_Qwen2-1.5B-Instruct_zero_shot_fakerecogna.json  Qwen_Qwen2-7B-Instruct_chain_of_thought_fakebr.json  Qwen_Qwen2-7B-Instruct_chain_of_thought_fakerecogna.json  Qwen_Qwen2-7B-Instruct_few_shot_fakebr.json  Qwen_Qwen2-7B-Instruct_few_shot_fakerecogna.json  Qwen_Qwen2-7B-Instruct_zero_shot_fakebr.json  Qwen_Qwen2-7B-Instruct_zero_shot_fakerecogna.json  benchmark_report.csv  benchmark_report.md  benchmark_report.xlsx  lucianosb_boto-9B-it_chain_of_thought_fakebr.json  lucianosb_boto-9B-it_chain_of_thought_fakerecogna.json  lucianosb_boto-9B-it_few_shot_fakebr.json  lucianosb_boto-9B-it_few_shot_fakerecogna.json  maritaca-ai_sabia-7b_few_shot_fakebr.json  (+16 more)
(+6 files in other folders)
